use smaller image and a few improvements